@@ -41,6 +41,7 @@
             "Carp" : "0",
             "Exporter" : "5.57",
             "Path::Tiny" : "0.097",
+            "Sort::filevercmp" : "0",
             "locale" : "0",
             "perl" : "5.008001",
             "sort" : "0"
@@ -60,7 +61,7 @@
    "provides" : {
       "Dir::ls" : {
          "file" : "lib/Dir/ls.pm",
-         "version" : "0.001"
+         "version" : "0.002"
       }
    },
    "release_status" : "stable",
@@ -75,7 +76,7 @@
          "web" : "https://github.com/Grinnz/Dir-ls"
       }
    },
-   "version" : "0.001",
+   "version" : "0.002",
    "x_Dist_Zilla" : {
       "perl" : {
          "version" : "5.026000"
@@ -264,7 +265,7 @@
                   "branch" : null,
                   "changelog" : "Changes",
                   "signed" : 0,
-                  "tag" : "v0.001",
+                  "tag" : "v0.002",
                   "tag_format" : "v%v",
                   "tag_message" : "v%v"
                },
