@@ -4,4 +4,5 @@ requires 'sort';
 requires 'Carp';
 requires 'Exporter' => '5.57';
 requires 'Path::Tiny' => '0.097';
+requires 'Sort::filevercmp';
 test_requires 'Test::More' => '0.88';
