@@ -5,6 +5,7 @@ use warnings;
 use Carp 'croak';
 use Exporter 'import';
 use Path::Tiny 'path';
+use Sort::filevercmp 'fileversort';
 use sort 'stable';
 
 our $VERSION = '0.002';
@@ -32,27 +33,7 @@ sub ls {
   local $options->{sort} = '' unless defined $options->{sort};
   unless ($options->{U} or $options->{sort} eq 'none' or $options->{f}) {
     if ($options->{v} or $options->{sort} eq 'version') {
-      # Algorithm from filevercmp
-      my @vparts = map { _version_sorter($_) } @entries;
-      no locale;
-      @entries = @entries[sort {
-        my ($aspecial, $bspecial) = ($vparts[$a]{special}, $vparts[$b]{special});
-        return $aspecial cmp $bspecial if defined $aspecial and defined $bspecial;
-        return -1 if defined $aspecial;
-        return 1 if defined $bspecial;
-        
-        my ($ahidden, $bhidden) = ($vparts[$a]{hidden}, $vparts[$b]{hidden});
-        return -1 if $ahidden and !$bhidden;
-        return 1 if !$ahidden and $bhidden;
-        
-        my ($aparts, $bparts) = ($vparts[$a]{parts}, $vparts[$b]{parts});
-        my $partscmp = _version_partscmp($aparts, $bparts);
-        return $partscmp if $partscmp;
-        
-        my ($asuffix, $bsuffix) = ($vparts[$a]{suffix}, $vparts[$b]{suffix});
-        my $suffixcmp = _version_partscmp($asuffix, $bsuffix);
-        return $suffixcmp;
-      } 0..$#entries];
+      @entries = fileversort @entries;
     } else {
       {
         # pre-sort by alphanumeric then full name
@@ -108,65 +89,6 @@ sub _alnum_sorter {
   # Only consider alphabetic, numeric, and blank characters (space + tab)
   $entry =~ tr/a-zA-Z0-9 \t//cd;
   return $entry;
-}
-
-sub _version_sorter {
-  my ($entry) = @_;
-  return { special => $entry } if $entry eq '' or $entry eq '.' or $entry eq '..';
-  my $hidden = $entry =~ s/^\.//;
-  my $suffix = '';
-  if ($entry =~ s/((?:\.[A-Za-z~][A-Za-z0-9~]*)*)$//) {
-    $suffix = $1;
-  }
-  my (@parts, @suffix);
-  while ($entry =~ s/^([^0-9]*)([0-9]*)// and (length $1 or length $2)) {
-    push @parts, $1, $2;
-  }
-  while ($suffix =~ s/^([^0-9]*)([0-9]*)// and (length $1 or length $2)) {
-    push @suffix, $1, $2;
-  }
-  return { hidden => $hidden, suffix => \@suffix, parts => \@parts };
-}
-
-# tilde sorts first even before end of string, then letters, then everything else
-sub _version_lexorder {
-  my ($char) = @_;
-  return 0 if $char =~ m/\A[0-9]\z/;
-  return ord $char if $char =~ m/\A[a-zA-Z]\z/;
-  return -1 if $char eq '~';
-  return ord($char) + ord('z') + 1;
-}
-
-sub _version_lexcmp {
-  my ($alex, $blex) = @_;
-  my @achars = split '', $alex;
-  my @bchars = split '', $blex;
-  while (@achars or @bchars) {
-    my ($achar, $bchar) = (shift(@achars), shift(@bchars));
-    my $aord = defined $achar ? _version_lexorder($achar) : 0;
-    my $bord = defined $bchar ? _version_lexorder($bchar) : 0;
-    my $charcmp = $aord <=> $bord;
-    return $charcmp if $charcmp;
-  }
-  return 0;
-}
-
-sub _version_partscmp {
-  my @aparts = @{$_[0] || []};
-  my @bparts = @{$_[1] || []};
-  while (@aparts or @bparts) {
-    my ($alex, $blex) = (shift(@aparts), shift(@bparts));
-    $alex = '' unless defined $alex;
-    $blex = '' unless defined $blex;
-    my $lexcmp = _version_lexcmp($alex, $blex);
-    return $lexcmp if $lexcmp;
-    my ($anum, $bnum) = (shift(@aparts), shift(@bparts));
-    $anum = 0 unless defined $anum and length $anum;
-    $bnum = 0 unless defined $bnum and length $bnum;
-    my $numcmp = $anum <=> $bnum;
-    return $numcmp if $numcmp;
-  }
-  return 0;
 }
 
 1;
@@ -264,8 +186,8 @@ C<< sort => 'none' >>.
 
 =item v
 
-Sort naturally by version numbers within the name. This sort algorithm ignores
-the current locale. Equivalent to C<< sort => 'version' >>.
+Sort naturally by version numbers within the name. Uses L<Sort::filevercmp>
+for sorting. Equivalent to C<< sort => 'version' >>.
 
 =item X
 
